syntax="proto3";

package proto;
option go_package = "./proto";

message Ticket {
    int32 id = 1;
    int32 hall_id = 2;
    int32 seats = 3;
    string entry_code = 4;
}

message CreateTicketRequest {
    int32 hall_id = 1;
    int32 seats = 2;
}

enum TicketBookingStatus {
    TICKET_BOOKING_STATUS_UNKNOWN = 0;
    TICKET_BOOKING_STATUS_PENDING = 1;
    TICKET_BOOKING_STATUS_RESERVING_SEATS = 2;
    TICKET_BOOKING_STATUS_SEATS_BOOKED = 3;
    TICKET_BOOKING_STATUS_CONFIRMED = 4;
    TICKET_BOOKING_STATUS_REJECTED = 5;
}

message CreateTicketResponse {
    Ticket ticket = 1;
    TicketBookingStatus status = 2;
}

service TicketService {
    rpc CreateTicket (CreateTicketRequest) returns (stream CreateTicketResponse) {}
}
